// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api handler can read the request params 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{\\"foo\\":\\"bar\\",\\"bar\\":\\"baz\\"},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api handler can read the request params 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: JSON.stringify(req.query), headers: { \\"Content-Type\\": \\"application/json\\" } }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api handler can read the request path 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api handler can read the request path 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.path }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api handler can set response headers 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"foo\\":\\"bar\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api handler can set response headers 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.headers, headers: { \\"x-wingnuts\\": \\"cloudy\\" } }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api response returns Content-Type header from inflight 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api response returns Content-Type header from inflight 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.headers, headers: { \\"Content-Type\\": \\"application/octet-stream; charset=utf-8\\" } }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api response returns default Content-Type header 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api response returns default Content-Type header 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body, headers: req.headers }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api supports every method type 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "Processing \\"POST /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":\\"\\",\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "Processing \\"PUT /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":\\"\\",\\"method\\":\\"PUT\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "PUT /hello - 200.",
  "Processing \\"DELETE /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"DELETE\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "DELETE /hello - 200.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"close\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"HEAD\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "Processing \\"OPTIONS /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"OPTIONS\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "OPTIONS /hello - 200.",
  "Processing \\"PATCH /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":\\"\\",\\"method\\":\\"PATCH\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "PATCH /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api supports every method type 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.method }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
      {
        "name": "post()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
      {
        "name": "put()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
      {
        "name": "delete()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
      {
        "name": "head()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
      {
        "name": "options()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
      {
        "name": "patch()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "delete": {
                  "operationId": "delete-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "head": {
                  "operationId": "head-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "options": {
                  "operationId": "options-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "patch": {
                  "operationId": "patch-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "put": {
                  "operationId": "put-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
              {
                "method": "POST",
                "path": "/hello",
              },
              {
                "method": "PUT",
                "path": "/hello",
              },
              {
                "method": "DELETE",
                "path": "/hello",
              },
              {
                "method": "HEAD",
                "path": "/hello",
              },
              {
                "method": "OPTIONS",
                "path": "/hello",
              },
              {
                "method": "PATCH",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with 'name' & 'age' parameter 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /{name}/{age}\\" params={\\"name\\":\\"akhil\\",\\"age\\":\\"23\\"}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/akhil/23\\",\\"query\\":{},\\"vars\\":{\\"name\\":\\"akhil\\",\\"age\\":\\"23\\"}}).",
  "GET /{name}/{age} - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with 'name' & 'age' parameter 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.vars ?? {} }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/{name}/{age}": {
                "get": {
                  "operationId": "get-{name}/{age}",
                  "parameters": [
                    {
                      "in": "path",
                      "name": "name",
                      "required": true,
                      "schema": {
                        "type": "string",
                      },
                    },
                    {
                      "in": "path",
                      "name": "age",
                      "required": true,
                      "schema": {
                        "type": "string",
                      },
                    },
                  ],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/{name}/{age}",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with 'name' parameter 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /{name}\\" params={\\"name\\":\\"akhil\\"}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/akhil\\",\\"query\\":{},\\"vars\\":{\\"name\\":\\"akhil\\"}}).",
  "GET /{name} - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with 'name' parameter 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.vars ?? {} }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/{name}": {
                "get": {
                  "operationId": "get-{name}",
                  "parameters": [
                    {
                      "in": "path",
                      "name": "name",
                      "required": true,
                      "schema": {
                        "type": "string",
                      },
                    },
                  ],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/{name}",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple GET routes and one lambda 1`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body, headers: req.headers }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello/bat": {
                "get": {
                  "operationId": "get-hello/bat",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
              "/hello/foo": {
                "get": {
                  "operationId": "get-hello/foo",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/foo",
              },
              {
                "method": "GET",
                "path": "/hello/bat",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple methods on same route 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "Processing \\"POST /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":\\"\\",\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with multiple methods on same route 2`] = `
{
  ".wing/onrequesthandler-7c48a9f0_c8912b27.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"boom\\" }; }
};
})())({

})).handle(event);
};",
  ".wing/onrequesthandler-f6d90a7f_c869cdc5.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"bang\\" }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-7c48a9f0",
      },
      {
        "name": "post()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-f6d90a7f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-7c48a9f0",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-7c48a9f0_c8912b27.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-7c48a9f0",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-7c48a9f0#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-f6d90a7f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-f6d90a7f_c869cdc5.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-f6d90a7f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-f6d90a7f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "POST",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler1": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler1",
          "path": "root/Handler1",
        },
        "Handler2": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler2",
          "path": "root/Handler2",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-7c48a9f0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-7c48a9f0",
              "path": "root/my_api/ApiEventMapping-7c48a9f0",
            },
            "ApiEventMapping-f6d90a7f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-f6d90a7f",
              "path": "root/my_api/ApiEventMapping-f6d90a7f",
            },
            "OnRequestHandler-7c48a9f0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-7c48a9f0",
              "path": "root/my_api/OnRequestHandler-7c48a9f0",
            },
            "OnRequestHandler-f6d90a7f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "post()",
              },
              "id": "OnRequestHandler-f6d90a7f",
              "path": "root/my_api/OnRequestHandler-f6d90a7f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple routes 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello/world\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello/world\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello/world - 200.",
  "Processing \\"GET /hello/wingnuts\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello/wingnuts\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello/wingnuts - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with multiple routes 2`] = `
{
  ".wing/onrequesthandler-7c48a9f0_c8912b27.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"boom\\" }; }
};
})())({

})).handle(event);
};",
  ".wing/onrequesthandler-f6d90a7f_c869cdc5.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"bang\\" }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-7c48a9f0",
      },
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-f6d90a7f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-7c48a9f0",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-7c48a9f0_c8912b27.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello/wingnuts": {
                "get": {
                  "operationId": "get-hello/wingnuts",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
              "/hello/world": {
                "get": {
                  "operationId": "get-hello/world",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-7c48a9f0",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-7c48a9f0#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/world",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-f6d90a7f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-f6d90a7f_c869cdc5.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-f6d90a7f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-f6d90a7f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/wingnuts",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler1": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler1",
          "path": "root/Handler1",
        },
        "Handler2": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler2",
          "path": "root/Handler2",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-7c48a9f0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-7c48a9f0",
              "path": "root/my_api/ApiEventMapping-7c48a9f0",
            },
            "ApiEventMapping-f6d90a7f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-f6d90a7f",
              "path": "root/my_api/ApiEventMapping-f6d90a7f",
            },
            "OnRequestHandler-7c48a9f0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-7c48a9f0",
              "path": "root/my_api/OnRequestHandler-7c48a9f0",
            },
            "OnRequestHandler-f6d90a7f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-f6d90a7f",
              "path": "root/my_api/OnRequestHandler-f6d90a7f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one GET route 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one GET route 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"boom\\" }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one GET route with request params 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /users/{name}\\" params={\\"name\\":\\"tsuf\\"}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":\\"\\",\\"method\\":\\"GET\\",\\"path\\":\\"/users/tsuf\\",\\"query\\":{},\\"vars\\":{\\"name\\":\\"tsuf\\"}}).",
  "GET /users/{name} - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one GET route with request params 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.vars ?? {} }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/users/{name}": {
                "get": {
                  "operationId": "get-users/{name}",
                  "parameters": [
                    {
                      "in": "path",
                      "name": "name",
                      "required": true,
                      "schema": {
                        "type": "string",
                      },
                    },
                  ],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/users/{name}",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "get()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one POST route, with body 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"POST /hello\\" params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"content-type\\":\\"application/json\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"25\\"},\\"body\\":\\"{\\\\\\"message\\\\\\":\\\\\\"hello world\\\\\\"}\\",\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one POST route, with body 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body, headers: req.headers }; }
};
})())({

})).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "post()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "POST",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "children": {
            "ApiEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.69",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "post()",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`create an api 1`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {},
          },
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.69",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.69",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
